--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 </head>
 
 <body>
+Hello
 
+<script data-cfasync="false" type="text/javascript" data-adel="atag" src="//asccdn.com/script/atg.js" czid="hl2c1bmdcq"></script>
 </body>
-
 </html>
