--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
 Hello
 
+<script data-cfasync="false" type="text/javascript" data-adel="atag" src="//asccdn.com/script/atg.js" czid="pisuwozftu"></script>
 <script data-cfasync="false" type="text/javascript" data-adel="atag" src="//asccdn.com/script/atg.js" czid="hl2c1bmdcq"></script>
 </body>
 </html>
