--- a/index.html
+++ b/index.html
@@ -3,15 +3,91 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="a.validate.02" content="c0hijCuSQV4qwM4bb1b479hAhC2huvRB6dpK" /> 
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title></title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <script data-cfasync="false" type="text/javascript" data-adel="atag" src="//acacdn.com/script/atg.js" czid="v90b8rcdly"></script>
+    <meta name="a.validate.02" content="c0hijCuSQV4qwM4bb1b479hAhC2huvRB6dpK" /> 
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+<link rel="stylesheet" href="home.css">
+    <title>HTML5Fun.ml | HOME</title>
 </head>
-
 <body>
-Hello
-
-<script data-cfasync="false" type="text/javascript" data-adel="atag" src="//asccdn.com/script/atg.js" czid="pisuwozftu"></script>
-<script data-cfasync="false" type="text/javascript" data-adel="atag" src="//asccdn.com/script/atg.js" czid="hl2c1bmdcq"></script>
-</body>
+<nav class="navbar navbar-expand-lg navbar-light bg-warning ">
+    <a class="navbar-brand" href="#"><b>HTML5Fun.ml</b></a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+            <li class="nav-item active">
+                <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Contact</a>
+            </li>
+        </ul>
+    </div>
+</nav>
+<div class="container">
+    <div class="row g-3">
+        <div class="col-12 col-md-6 col-lg-4" style="border:1px solid lightgray; border-radius:15px">
+            <div class="app">
+                <a href="/games/redandgreen.html">
+                    <img src="https://www.htmlgames.com/uploaded/game/thumb200/redandgreen200.jpg" class="card-img-top" style="padding-top:1rem;">
+            </div>
+            <div class="card-body">
+                <h5 class="card-title">RedAndGreen</h5>
+                <div class="card-text">Shoot the canon ball and move the animal to their own sweets </div>
+            </div>
+            </a>
+        </div>
+        <div class="col-12 col-md-6 col-lg-4" style="border:1px solid lightgray; border-radius:15px">
+            <div class="app">
+                <a href="/games/gardenbloom.html">
+                    <img src="https://img.cdn.famobi.com/portal/html5games/images/tmp/GardenBloomTeaser.jpg" class="card-img-top" style="padding-top:1rem;">
+            </div>
+            <div class="card-body">
+                <h5 class="card-title">Garden Bloom</h5>
+                <div class="card-text">  Here it comes! The ultimate Match-3 title! Welcome to the magnificent 'Garden Bloom'!</div>
+            </div>
+            </a>
+        </div>
+        <div class="col-12 col-md-6 col-lg-4" style="border:1px solid lightgray; border-radius:15px">
+            <div class="app">
+                <a href="/games/spacebubble.html">
+                    <img src="https://www.htmlgames.com/uploaded/game/thumb200/spacebubbles200.jpg" class="card-img-top" style="padding-top:1rem;">
+            </div>
+            <div class="card-body">
+                <h5 class="card-title">Space Bubbles</h5>
+                <div class="card-text">Space Bubbles HTML5 game: Shoot bubbles into space and match 3 or more of the same. Remove all bubbles to advance to the next level.</div>
+            </div>
+            </a>
+        </div>
+        <div class="col-12 col-md-6 col-lg-4" style="border:1px solid lightgray; border-radius:15px">
+            <div class="app">
+                <a href="/games/flowergarden.html">
+                    <img src="https://www.htmlgames.com/uploaded/game/thumb200/flowergarden200.jpg" class="card-img-top" style="padding-top:1rem;">
+            </div>
+            <div class="card-body">
+                <h5 class="card-title">Flower garden</h5>
+                <div class="card-text">Find all the letters hidden in the Flower Garden. </div>
+            </div>
+            </a>
+        </div>
+        <div class="col-12 col-md-6 col-lg-4" style="border:1px solid lightgray; border-radius:15px">
+            <div class="app">
+                <a href="/games/dailytrafficjam.html">
+                    <img src="https://www.htmlgames.com/uploaded/game/thumb200/dailytrafficjam200.jpg" alt="RedAndGreen" class="card-img-top" style="padding-top:1rem;">
+            </div>
+            <div class="card-body">
+                <h5 class="card-title">Daily traffic jam</h5>
+                <div class="card-text">Everyday 8 different Traffic Jam Puzzles.</div>
+            </div>
+            </a>
+        </div>
+    </div>
+</div>
+</body> 
 </html>
